--- a/HTML/main.html
+++ b/HTML/main.html
@@ -12,16 +12,18 @@
         <div class="board">
             <div class="header">
                 <h1>Lecture Stats</h1>
-                <h2>모든 과목 조회</h2>
-                <h2>전공 과목 조회</h2>
+                <h2>모든 과목 조회</h2> <!-- 22-1학기 과목만 조회 가능-->
                 <h2>교양 과목 조회</h2>
                 <h2>교수별 조회</h2>
-                <h2>강의 순위</h2>      <!-- 가로로 정렬 꼭 하기 -->
+                <h2>강의 순위 조회</h2>      <!-- 가로로 정렬 꼭 하기 -->
             </div>
             <div class="body">
-                <p>
-                    <br>
-                </p>
+                <h3>평가 높은 순</h3>
+                <h3>평가 낮은 순</h3>
+                <h3>평가 많은 순</h3>
+                <p>강의명 : OOO</p>
+                <p>교수명 : OOO</p>
+                <p>구분 : 전공()</p>
             </div>
             <div class="test">
             </div>
